--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,95 @@
-{}
+{
+  "topLoginText": "Morigele",
+  "age": "Age",
+  "username": "Username",
+  "password": "Password",
+  "verifyCode": "Verification Code",
+  "login": "Login",
+  "agreement": "By logging in, you agree to",
+  "agreementLink": "Morigele User Agreement",
+  "userPrivateLink": "User Privacy",
+  "editProfile": "Edit Profile",
+  "commonProblem": "Common Problems",
+  "aboutUs": "About Us",
+  "settings": "App Settings",
+  "fahuodi": "Origin: ",
+  "genzong": "Tracking: ",
+  "wupinneirong": "Item Content: ",
+  "querendingdan": "Confirm Order",
+  "morigeleyidongduan": "Morigele Mobile App",
+  "fuwurexian": "Service Hotline",
+  "xitongjiekou": "System Interface",
+  "changjianwenti": "FAQ",
+  "xiugaimima": "Change Password",
+  "xiugaitouxiang": "Change Profile Picture",
+  "xiugaiziliao": "Edit Information",
+  "gerenxinxi": "Personal Information",
+  "yingyongshezhi": "App Settings",
+  "wode": "My",
+  "nicheng": "Nickname",
+  "denglu": "Log in",
+  "qingshuruyonghuming": "Please enter username",
+  "qingshurumima": "Please enter password",
+  "qingshuruyanzhengma": "Please enter verification code",
+  "tongyijidaibiaodenglu": "Logging in represents agreement with",
+  "yonghufuwuxieyi": "User Service Agreement",
+  "yonghuxieyi": "User Agreement",
+  "yonghuyinsi": "User Privacy",
+  "yinsizhengce": "Privacy Policy",
+  "dingdanhao": "Order Number: ",
+  "dingdanliebiao": "Order List",
+  "dingdan": "Order",
+  "shangpin": "Product: ",
+  "zongjia": "Total Price: ",
+  "dangqianjindu": "Current Progress: ",
+  "zhengzaichuku": "In Warehouse",
+  "dengdailanshou": "Awaiting Collection",
+  "zhengzaiyunshu": "In Transit",
+  "yididamudidi": "Arrived at Destination",
+  "dingdanxiangqing": "Order Details",
+  "yonghuming": "Username: ",
+  "kuaiji": "Accountant",
+  "kehu": "Customer",
+  "xiaoshou": "Sales",
+  "jingli": "Manager",
+  "putongjuese": "Regular Role",
+  "chaojiguanliyuan": "Super Administrator",
+  "shoujihaoma": "Phone Number",
+  "youxiang": "Email",
+  "bumen": "Department",
+  "gangwei": "Position",
+  "juese": "Role",
+  "jiumima": "Old Password",
+  "xinmima": "New Password",
+  "qingshuruxinmima": "Please enter new password",
+  "jianchagengxin": "Check for Updates",
+  "tuichudenglu": "Log Out",
+  "xitongtishi": "System Notice",
+  "ninquedingyaotuichumang": "Are you sure you want to log out?",
+  "quxiao": "Cancel",
+  "queding": "Confirm",
+  "yonghunicheng": "User Nickname",
+  "qingshurunicheng": "Please enter nickname",
+  "qingshurushoujihao": "Please enter phone number",
+  "qingshuruyouxiang": "Please enter email",
+  "xingbie": "Gender",
+  "tijiao": "Submit",
+  "dingdanjindu": "Order Progress: ",
+  "weifukuan": "Unpaid",
+  "yifukuan": "Paid",
+  "yiwancheng": "Completed",
+  "wuliuxinxi": "Logistics Information",
+  "dingdanxinxi": "Order Information",
+  "xiaoshouyuan": "Salesperson: ",
+  "shifouqueren": "Confirmation: ",
+  "weiqueren": "Unconfirmed",
+  "yiqueren": "Confirmed",
+  "chuangjianshijian": "Creation Time: ",
+  "bianjiziliao": "Edit Information",
+  "qingshurujiumima": "Please enter old password",
+  "xiaoshouxiadan": "Sales Order",
+  "shangpinxinxi": "Amount: {good.amount}\nUnit Price: {good.unitPrice} {widget.order.currencyType}\nTotal Price: {good.totalPrice} {widget.order.currencyType}",
+  "goodNameGoodname": "Product Name: ${good.name!}",
+  "wuliuzhuangtai": "Logistics Status",
+  "zhuangtaimiaoshu": "Status Description"
+}
